--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,16 +1,17 @@
 # This is an example goreleaser.yaml file with some sane defaults.
 # Make sure to check the documentation at http://goreleaser.com
 before:
-  hooks:
-    # you may remove this if you don't use vgo
-    - go mod download
-    # you may remove this if you don't need go generate
-    - go generate ./...
+  # hooks:
+  #   # you may remove this if you don't use vgo
+  #   - go mod tidy
+  #   # you may remove this if you don't need go generate
+  #   - go generate ./...
 builds:
 - env:
   - CGO_ENABLED=0
-archive:
-  replacements:
+  - GO111MODULE=off
+archives:
+- replacements:
     darwin: Darwin
     linux: Linux
     windows: Windows
