--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,16 +1,8 @@
-# This is an example goreleaser.yaml file with some sane defaults.
-# Make sure to check the documentation at http://goreleaser.com
-before:
-  hooks:
-    # you may remove this if you don't use vgo
-    - go mod download
-    # you may remove this if you don't need go generate
-    - go generate ./...
 builds:
 - env:
   - CGO_ENABLED=0
-archive:
-  replacements:
+archives:
+- replacements:
     darwin: Darwin
     linux: Linux
     windows: Windows
@@ -26,3 +18,17 @@ changelog:
     exclude:
     - '^docs:'
     - '^test:'
+brews:
+  -
+    # Github repository to push the tap to.
+    github:
+      owner: juicedata
+      name: homebrew-tap
+
+    # Folder inside the repository to put the formula.
+    # Default is the root folder.
+    folder: Formula
+
+    homepage: "https://juicefs.com/"
+
+    description: "A tool to move your data between any clouds or regions."
