--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -15,7 +15,10 @@ jobs:
         uses: actions/checkout@master
       -
         name: Set up Go
-        uses: actions/setup-go@master
+        uses: actions/setup-go@v1.1.1
+        with:
+          go-version: '1.13.x'
+
       -
         name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v1
