--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,13 +1,19 @@
 builds:
-- env:
-  - CGO_ENABLED=0
+  - env:
+      - CGO_ENABLED=0
+    ldflags:
+      - -s -w 
+      - -X github.com/juicedata/juicesync/versioninfo.VERSION={{.Version}}
+      - -X github.com/juicedata/juicesync/versioninfo.REVISION={{.Commit}}
+      - -X github.com/juicedata/juicesync/versioninfo.REVISIONDATE={{.Date}}
+
 archives:
-- replacements:
-    darwin: Darwin
-    linux: Linux
-    windows: Windows
-    386: i386
-    amd64: x86_64
+  - replacements:
+      darwin: Darwin
+      linux: Linux
+      windows: Windows
+      386: i386
+      amd64: x86_64
 checksum:
   name_template: 'checksums.txt'
 snapshot:
@@ -16,8 +22,8 @@ changelog:
   sort: asc
   filters:
     exclude:
-    - '^docs:'
-    - '^test:'
+      - '^docs:'
+      - '^test:'
 brews:
   -
     # Github repository to push the tap to.
