--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -30,6 +30,11 @@ builds:
       - darwin
     goarch:
       - amd64
+    ldflags:
+      - -s -w
+      - -X github.com/juicedata/juicesync/versioninfo.VERSION={{.Version}}
+      - -X github.com/juicedata/juicesync/versioninfo.REVISION={{.Commit}}
+      - -X github.com/juicedata/juicesync/versioninfo.REVISIONDATE={{.Date}}
     main: .
   - id: juicesync-darwin-arm64
     env:
